--- a/mstyle.css
+++ b/mstyle.css
@@ -28,6 +28,7 @@ body {
 #maintext {
     position: absolute;
     max-width: 500px;
+    min-width: 300px;
     margin-left: 220px;
     margin-top: 0px;
 }
